# jinja2-cli

./: README.md  pyproject.toml
src/jinja2cli/: cli.py
